5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4496/executions/1671_1105.log
== TEST (2019-04-29 12:04:19) 
-- CODE:
bra = input("Digite o brasão: ")











-- OUTPUT:
Entradas:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:04:32) 
-- CODE:
bra = input("Digite o brasao: ")











-- OUTPUT:
Entradas:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:09:10) 
-- CODE:
bra = input("Digite o brasao: ")
print(bra)
#lobo = Stark #leao = Lannister #veado = Baratheon #dragao = Targaryen
#rosa = Tyrell #sol = Martell #lula = Greyjoy #esfolado = Bolton #turta = Tully

if(bra == lobo):
	print()




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(bra == lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:10:30) 
-- CODE:
bra = input("Digite o brasao: ")
print("Entrada:" , bra)
#lobo = Stark #leao = Lannister #veado = Baratheon #dragao = Targaryen
#rosa = Tyrell #sol = Martell #lula = Greyjoy #esfolado = Bolton #turta = Tully

if(bra == lobo):
	print("Casa: Stark")




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(bra == lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:11:17) 
-- CODE:
bra = input("Digite o brasao: ")
print("Entrada:" , bra)
#lobo = Stark #leao = Lannister #veado = Baratheon #dragao = Targaryen
#rosa = Tyrell #sol = Martell #lula = Greyjoy #esfolado = Bolton #turta = Tully

if(bra == "lobo"):
	print("Casa: Stark")
elif(bra == )




-- ERROR:
File "XXXX", line 8
    elif(bra == )
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:11:55) 
-- CODE:
bra = input("Digite o brasao: ")
print("Entrada:" , bra)
#lobo = Stark #leao = Lannister #veado = Baratheon #dragao = Targaryen
#rosa = Tyrell #sol = Martell #lula = Greyjoy #esfolado = Bolton #turta = Tully

if(bra == "lobo"):
	print("Casa: Stark")
elif(bra == "leao"):
	print("Casa: Lannister")




-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:12:45) 
-- CODE:
bra = input("Digite o brasao: ").lower()
print("Entrada:" , bra)
#lobo = Stark #leao = Lannister #veado = Baratheon #dragao = Targaryen
#rosa = Tyrell #sol = Martell #lula = Greyjoy #esfolado = Bolton #turta = Tully

if(bra == "lobo"):
	print("Casa: Stark")
elif(bra == "leao"):
	print("Casa: Lannister")




-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:19:02) 
-- CODE:
bra = input("Digite o brasao: ").lower()
print("Entrada:" , bra)
#lobo = Stark #leao = Lannister #veado = Baratheon #dragao = Targaryen
#rosa = Tyrell #sol = Martell #lula = Greyjoy #esfolado = Bolton #turta = Tully

if(bra == "lobo"):
	print("Casa: Stark")
elif(bra == "leao"):
	print("Casa: Lannister")
elif(bra == "veado"):
	print("Casa: Baratheon")
elif(bra == "dragao")
	print("Casa: Targaryen")
elif(bra == "rosa"):
	print("Casa: Tyrell")
elif(bra == "sol"):
	print("Casa: Martell")
elif(bra == "lula"):
	print("Casa: Greyjoy")
elif(bra == "esfolado"):
	print("Casa: Bolton")
elif(bra == "turta"):	
	print("Casa: Tully")
else:
	print("Brasao invalido")
	
	



-- ERROR:
File "XXXX", line 12
    elif(bra == "dragao")
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:19:21) 
-- CODE:
bra = input("Digite o brasao: ").lower()
print("Entrada:" , bra)
#lobo = Stark #leao = Lannister #veado = Baratheon #dragao = Targaryen
#rosa = Tyrell #sol = Martell #lula = Greyjoy #esfolado = Bolton #turta = Tully

if(bra == "lobo"):
	print("Casa: Stark")
elif(bra == "leao"):
	print("Casa: Lannister")
elif(bra == "veado"):
	print("Casa: Baratheon")
elif(bra == "dragao")
	print("Casa: Targaryen")
elif(bra == "rosa"):
	print("Casa: Tyrell")
elif(bra == "sol"):
	print("Casa: Martell")
elif(bra == "lula"):
	print("Casa: Greyjoy")
elif(bra == "esfolado"):
	print("Casa: Bolton")
elif(bra == "turta"):	
	print("Casa: Tully")
else:
	print("Brasao invalido")
	
	



-- ERROR:
File "XXXX", line 12
    elif(bra == "dragao")
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:19:32) 
-- CODE:
bra = input("Digite o brasao: ").lower()
print("Entrada:" , bra)
#lobo = Stark #leao = Lannister #veado = Baratheon #dragao = Targaryen
#rosa = Tyrell #sol = Martell #lula = Greyjoy #esfolado = Bolton #turta = Tully

if(bra == "lobo"):
	print("Casa: Stark")
elif(bra == "leao"):
	print("Casa: Lannister")
elif(bra == "veado"):
	print("Casa: Baratheon")
elif(bra == "dragao")
	print("Casa: Targaryen")
elif(bra == "rosa"):
	print("Casa: Tyrell")
elif(bra == "sol"):
	print("Casa: Martell")
elif(bra == "lula"):
	print("Casa: Greyjoy")
elif(bra == "esfolado"):
	print("Casa: Bolton")
elif(bra == "turta"):	
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
File "XXXX", line 12
    elif(bra == "dragao")
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:21:30) 
-- CODE:
bra = input("Digite o brasao: ").lower()
print("Entrada:" , bra)
#lobo = Stark #leao = Lannister #veado = Baratheon #dragao = Targaryen
#rosa = Tyrell #sol = Martell #lula = Greyjoy #esfolado = Bolton #turta = Tully

if(bra == "lobo"):
	print("Casa: Stark")
elif(bra == "leao"):
	print("Casa: Lannister")
elif(bra == "veado"):
	print("Casa: Baratheon")
elif(bra == "dragao")
	print("Casa: Targaryen")
elif(bra == "rosa"):
	print("Casa: Tyrell")
elif(bra == "sol"):
	print("Casa: Martell")
elif(bra == "lula"):
	print("Casa: Greyjoy")
elif(bra == "esfolado"):
	print("Casa: Bolton")
elif(bra == "turta"):	
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
File "XXXX", line 12
    elif(bra == "dragao")
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:22:04) 
-- CODE:
bra = input("Digite o brasao: ").lower()
print("Entrada:" , bra)
#lobo = Stark #leao = Lannister #veado = Baratheon #dragao = Targaryen
#rosa = Tyrell #sol = Martell #lula = Greyjoy #esfolado = Bolton #turta = Tully

if(bra == "lobo"):
	print("Casa: Stark")
elif(bra == "leao"):
	print("Casa: Lannister")
elif(bra == "veado"):
	print("Casa: Baratheon")
elif(bra == "dragao"):
	print("Casa: Targaryen")
elif(bra == "rosa"):
	print("Casa: Tyrell")
elif(bra == "sol"):
	print("Casa: Martell")
elif(bra == "lula"):
	print("Casa: Greyjoy")
elif(bra == "esfolado"):
	print("Casa: Bolton")
elif(bra == "turta"):	
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:22:13) 
-- CODE:
bra = input("Digite o brasao: ").lower()
print("Entrada:" , bra)
#lobo = Stark #leao = Lannister #veado = Baratheon #dragao = Targaryen
#rosa = Tyrell #sol = Martell #lula = Greyjoy #esfolado = Bolton #turta = Tully

if(bra == "lobo"):
	print("Casa: Stark")
elif(bra == "leao"):
	print("Casa: Lannister")
elif(bra == "veado"):
	print("Casa: Baratheon")
elif(bra == "dragao"):
	print("Casa: Targaryen")
elif(bra == "rosa"):
	print("Casa: Tyrell")
elif(bra == "sol"):
	print("Casa: Martell")
elif(bra == "lula"):
	print("Casa: Greyjoy")
elif(bra == "esfolado"):
	print("Casa: Bolton")
elif(bra == "turta"):	
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 12:22:30) 
-- CODE:
bra = input("Digite o brasao: ").lower()
print("Entrada:" , bra)
#lobo = Stark #leao = Lannister #veado = Baratheon #dragao = Targaryen
#rosa = Tyrell #sol = Martell #lula = Greyjoy #esfolado = Bolton #turta = Tully

if(bra == "lobo"):
	print("Casa: Stark")
elif(bra == "leao"):
	print("Casa: Lannister")
elif(bra == "veado"):
	print("Casa: Baratheon")
elif(bra == "dragao"):
	print("Casa: Targaryen")
elif(bra == "rosa"):
	print("Casa: Tyrell")
elif(bra == "sol"):
	print("Casa: Martell")
elif(bra == "lula"):
	print("Casa: Greyjoy")
elif(bra == "esfolado"):
	print("Casa: Bolton")
elif(bra == "turta"):	
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.144922
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 12:24:20) 
-- CODE:
bra = input("Digite o brasao: ").lower()
print("Entrada:" , bra)
#lobo = Stark #leao = Lannister #veado = Baratheon #dragao = Targaryen
#rosa = Tyrell #sol = Martell #lula = Greyjoy #esfolado = Bolton #turta = Tully

if(bra == "lobo"):
	print("Casa: Stark")
elif(bra == "leao"):
	print("Casa: Lannister")
elif(bra == "veado"):
	print("Casa: Baratheon")
elif(bra == "dragao"):
	print("Casa: Targaryen")
elif(bra == "rosa"):
	print("Casa: Tyrell")
elif(bra == "sol"):
	print("Casa: Martell")
elif(bra == "lula"):
	print("Casa: Greyjoy")
elif(bra == "esfolado"):
	print("Casa: Bolton")
elif(bra == "turta"):	
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.205063
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
